[gd_scene load_steps=2 format=3 uid="uid://cv8xcqm2e6dab"]

[ext_resource type="Script" uid="uid://3gc4yrhrv8tt" path="res://Scenes/Enemy/enemy.gd" id="1_mw074"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_mw074")

[node name="EnemyTexture" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
